--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+    <nav>
+        <h1>Menu:</h1>
+            <ul>
+                <li><a href="#about" id="link_about">About us</a></li>
+                <li><a href="#skills" id="link_skills">Skills</a></li>
+                <li><a href="#portfolio" id="link_portfolio">Portfolio</a></li>
+                <li><a href="#contact" id="link_contact">Contact</a></li>
+            </ul>
+    </nav>
 </body>
 </html>
+<a href="" id="link"></a>
