--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
                 <li><a href="#contact" id="link_contact">Contact</a></li>
             </ul>
     </nav>
+    <section id="about">
+        <h2>About us</h2>
+            <p>BlaBlaBlaBlaBlaBlaBlaBlaBlaBlaBlaBlaBlaBlaBla</p>
+    </section>
 </body>
 </html>
-<a href="" id="link"></a>
