--- a/index.html
+++ b/index.html
@@ -6,18 +6,25 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <nav>
-        <h1>Menu:</h1>
+    <h1>Menu:</h1>
+        <nav>
             <ul>
                 <li><a href="#about" id="link_about">About us</a></li>
                 <li><a href="#skills" id="link_skills">Skills</a></li>
                 <li><a href="#portfolio" id="link_portfolio">Portfolio</a></li>
                 <li><a href="#contact" id="link_contact">Contact</a></li>
             </ul>
-    </nav>
+        </nav>
     <section id="about">
         <h2>About us</h2>
             <p>BlaBlaBlaBlaBlaBlaBlaBlaBlaBlaBlaBlaBlaBlaBla</p>
+    </section>
+    <section id="skills">
+        <h2>Skills</h2>
+        <div class="square" id="square1S"></div>
+        <div class="square" id="square2S"></div>
+        <div class="square" id="square3S"></div>
+        <div class="square" id="square4S"></div>
     </section>
 </body>
 </html>
