--- a/index.html
+++ b/index.html
@@ -21,10 +21,16 @@
     </section>
     <section id="skills">
         <h2>Skills</h2>
-        <div class="square" id="square1S"></div>
-        <div class="square" id="square2S"></div>
-        <div class="square" id="square3S"></div>
-        <div class="square" id="square4S"></div>
+        <div class="skills-square" id="square1S"></div>
+        <div class="skills-square" id="square2S"></div>
+        <div class="skills-square" id="square3S"></div>
+        <div class="skills-square" id="square4S"></div>
+    </section>
+    <section id="portfolio">
+        <h2>Porfolio</h2>
+        <div class="portfolio-square" id="square1P"></div>
+        <div class="portfolio-square" id="square2P"></div>
+        <div class="portfolio-square" id="square3P"></div>
     </section>
 </body>
 </html>
