--- a/index.html
+++ b/index.html
@@ -32,5 +32,23 @@
         <div class="portfolio-square" id="square2P"></div>
         <div class="portfolio-square" id="square3P"></div>
     </section>
+    <section id="contact">
+        <h2>Maciej Wydrych</h2>
+        <adress>
+            e-mail: m.wydrych@gmail.com<br>
+            tel.: +48698040217
+        </adress>
+        <br><br>
+        <form>
+        Imię:<br>
+        <input type="text" name="name" required>
+        <br>
+        Temat:<br>
+        <input type="text" name="topic" required>
+        <br><br>
+        <button id="submit_button" type="submit">Wyślij</button>
+        
+    </form>
+    </section>
 </body>
 </html>
